# tcf.agent

./: .gitignore  .mailmap  cmake-tcf-lib.txt
agent/: .project  CMakeLists.txt  Makefile  Makefile.inc  agent-vc2008.sln  agent-vc2010.sln  agent-vc2010.vcxproj  agent-vc2010.vcxproj.filters  agent-vc2012.sln  agent-vc2012.vcxproj  agent-vc2012.vcxproj.filters  agent.vcproj  agent.vcxproj  agent.vcxproj.filters
agent/cmake/: build-gcc-debug.sh  build-gcc-release.sh  build-msvc-debug.bat  build-msvc-release.bat
agent/machine/a64/tcf/: cpu-regs-gdb.h  cpudefs-mdep.c  cpudefs-mdep.h  disassembler-a64.c  disassembler-a64.h  regset-mdep.h  stack-crawl-a64.c  stack-crawl-a64.h
agent/machine/arm/tcf/: cpu-regs-gdb.h  cpudefs-mdep.c  cpudefs-mdep.h  disassembler-arm.c  disassembler-thumb.c  dwarfreloc-mdep.h  regset-mdep.h  stack-crawl-arm-ext.h  stack-crawl-arm.c  stack-crawl-arm.h
agent/machine/i386/tcf/: cpu-regs-gdb.h  dwarfreloc-mdep.h  (+1 more)
agent/msvc/: agent-vc2015.sln  agent-vc2015.vcxproj  agent-vc2015.vcxproj.filters
agent/tcf/: config.h
agent/tcf/framework/: asyncreq.c  asyncreq.h  cache.c  cache.h  channel.c  channel.h  channel_lws.c  channel_lws.h  channel_lws_ext.h  channel_pipe.c  channel_pipe.h  channel_tcp.c  channel_tcp.h  config.h  context-dispatcher-ext.h  context-dispatcher.c  context-dispatcher.h  context-mux-ext.h  context-mux.h  context.c  context.h  cpudefs-ext.h  cpudefs-mdep-mux.h  cpudefs-mux.h  cpudefs.c  cpudefs.h  errors.c  errors.h  events.c  events.h  exceptions.c  exceptions.h  inputbuf.c  ip_ifc.c  json.c  json.h  link.h  mdep-fs.h  mdep-inet.h  mdep.c  (+20 more)
agent/tcf/http/: http-tcf.c  http-tcf.h  http.c  http.h
agent/tcf/main/: framework.c  gdb-rsp.c  gdb-rsp.h  logfilter.c  main.c  main_log.c  main_lua.c  main_reg.c  main_va.c  server.c  services.c  tcf-agent.spec  test.c
agent/tcf/services/: breakpoints.c  breakpoints.h  contextquery.c  contextreset.c  contextreset.h  diagnostics.c  diagnostics.h  disassembly.c  disassembly.h  discovery.c  discovery_udp.c  dprintf.c  dwarf.h  dwarfcache.c  dwarfcache.h  dwarfecomp.c  dwarfecomp.h  dwarfexpr.c  dwarfexpr.h  dwarfframe.c  dwarfio.c  dwarfio.h  dwarfreloc-ext.h  dwarfreloc.c  dwarfreloc.h  elf-loader.c  elf-symbols-ext.h  elf-symbols.c  elf-symbols.h  expressions.c  expressions.h  filesystem.c  filesystem.h  linenumbers.c  linenumbers.h  linenumbers_elf-ext.h  linenumbers_elf.c  linenumbers_mux.c  linenumbers_mux.h  linenumbers_proxy.c  (+36 more)
(+87 files in other folders)
